# ocaml-testing-template

./: .coveralls.yml.enc  .gitignore  .travis.yml  CNAME  LICENSE  Makefile  README.md  dune-project  hello_world.opam  index.html  lib.opam
.circleci/: config.yml
hello_world/: index.html
hello_world/Hello_world/: index.html
hello_world/Lib/: index.html
hello_world/Lib/Documentation_example/: index.html
hello_world/Lib/Hello_world/: index.html
hello_world/Lib/Something/: index.html
hello_world/Lib__Documentation_example/: index.html
hello_world/Lib__Hello_world/: index.html
hello_world/Lib__Something/: index.html
src/: documentation_example.ml  documentation_example.mli  dune  hello_world.mli  something.re
src/inline-expect-tests/: dune  foo.ml
tests/: dune  test_hello_world.ml
tests/alcotest-qcheck/: test_hello_world.ml
tests/expect/: dune  test_something.ml
