opam-version: "2.0"
synopsis: "A template for Ocaml Tooling"
version: "0.4"
maintainer: "msr45@cam.ac.uk"
authors: ["Mukul Rathi"]
homepage: "https://github.com/mukul-rathi/ocaml-testing-template"
bug-reports: "https://github.com/mukul-rathi/ocaml-testing-template/issues"
dev-repo: "git+https://github.com/mukul-rathi/ocaml-testing-template.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"
  "qcheck"
  "qcheck-alcotest"
  "alcotest"
  "odoc"
  "ocamlformat"
  "bisect_ppx" {dev & >= "2.0.0"}
  "ppx_js_style"
]

pin-depends: [
  ["bisect_ppx.git" "git+https://github.com/aantron/bisect_ppx.git"]
]